--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,11 @@
 
 <!-- <app-portafolio></app-portafolio> -->
 <!-- <app-about></app-about> -->
-<app-item></app-item>
-
+<!-- <app-item></app-item> -->
+<router-outlet></router-outlet>
 </section>
 
 <app-footer></app-footer>
 
-<!-- <router-outlet></router-outlet> -->
+
 
