--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -1,7 +1,9 @@
 
   <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
 
-    <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4"><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-1.jpg" alt="">
+    <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
+      <a routerLink="/item" routerLinkActive="router-link-active" class="rk-item ae-masonry__item">
+      <img src="assets/img/project-1.jpg" alt="">
         <div class="item-meta">
           <h2>Essential Stationery</h2>
           <p>Branding</p>
